--- a/index.html
+++ b/index.html
@@ -22,9 +22,9 @@
                 <div id="inputpasswordlogin">
                     <input type="password" name="password" id="password" placeholder="password">
                 </div>
-                <div id="login-btn">
+                <a href="facebook.com"><div id="login-btn">
                     <button type="submit">Log In</button>
-                </div>
+                </div><a/>
                 <div class="optionallogin">
                     <div class="firstoptionalbar"><p></p></div>
                     <div class="optionalor">OR</div>
